--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.14.12",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -19,6 +20,7 @@
     "typescript": "^4.1.6"
   },
   "scripts": {
+    "local": "PORT=8080 react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
